# image_processing

./: .gitignore  .gitignore.swp
kurs/: .main.cpp.swp  :w  CMakeLists.txt  compile_commands.json  main.cpp
lab1/: .main.cpp.swp  CMakeLists.txt  main.cpp
lab1/cmake_build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  lab1
lab2/: CMakeLists.txt  main.cpp
lab2/cmake_build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  lab2
lab3/: .main.cpp.swp  CMakeLists.txt  main.cpp
lab3/cmake_build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  lab3
lab4/: .main.cpp.swo  .main.cpp.swp  CMakeLists.txt  NetrwTreeListing 1  compile_commands.json  main.cpp
lab4/cmake_build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake  lab4
noise_kurs/: .MainFrame.h.swp  .XMLFunctions.h.swp  CMakeLists.txt  MainFrame.h  NoiseView.h  Window.cpp  XMLFunctions.h  compile_commands.json  main.cpp
noise_kurs/3dparty/: CMakeLists.txt
noise_kurs/3dparty/FastNoise/: CMakeLists.txt
noise_kurs/3dparty/tinyxml2/: CMakeLists.txt
noise_kurs/3dparty/xz/lib/: liblzma.5.dylib
noise_kurs/cmake_build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  noise
noise_kurs/include/: .MainSettings.h.swp  CelluralSettings.h  FractalSettings.h  MainFrame.h  MainSettings.h  MasterHeader.h  NoiseView.h  XMLFunctions.h
noise_kurs/src/: .Window.cpp.swp  CelluralSettings.cpp  FractalSettings.cpp  MainFrame.cpp  MainSettings.cpp  NoiseView.cpp  Window.cpp
opencv_test1/: .main.cpp.swp  CMakeLists.txt  main.cpp
opencv_test1/cmake_build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  opencv_test1
test/: .main.cpp.swp  CMakeLists.txt  main.cpp
test/cmake_build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  test_kr
